# agno-blog-post-generator

./: .env.example  .gitignore  CHANGELOG.md  COMET_ML_SETUP.md  COMET_QUICK_REFERENCE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION_GUIDE.md  Makefile  OBSERVABILITY.md  OPIK_BUGFIX.md  OPIK_FINAL_IMPLEMENTATION.md  OPIK_IMPLEMENTATION_SUMMARY.md  OPIK_QUICK_REFERENCE.md  OPIK_SETUP.md  QUICK_START.md  README.md  STREAMLIT_GUIDE.md  blog_post_generator.py  docker-compose.yaml  pyproject.toml  setup_comet_env.sh  streamlit_app.py  test_comet_integration.py  test_opik_integration_fixed.py
.windsurf/rules/: gitflow-rules.md
docs/: README.md
docs/api/: API_REFERENCE.md
docs/architecture/: ARCHITECTURE.md
docs/guides/: DEVELOPMENT.md  GETTING_STARTED.md  GROQ_LIMITATIONS.md  GROQ_QUICK_START.md  OBSERVABILITY.md
examples/: groq_example.py
notebooks/: example_usage.ipynb
src/agno/: cli.py
src/agno/application/blog_generation_service/: __init__.py  service.py
src/agno/domain/agents/: scraper_agent.py  writer_agent.py
src/agno/domain/models/: blog_models.py
src/agno/infrastructure/api/: models.py
src/agno/infrastructure/db/: __init__.py  sqlite.py
src/agno/infrastructure/llm_providers/: __init__.py
src/agno_blog/: __init__.py  cli.py  config.py
src/agno_blog/application/blog_generation_service/: cache.py  service.py
src/agno_blog/domain/: exceptions.py  utils.py
src/agno_blog/domain/agents/: __init__.py  research_agent.py  scraper_agent.py  writer_agent.py
src/agno_blog/domain/models/: __init__.py
src/agno_blog/domain/prompts/: __init__.py
src/agno_blog/domain/tools/: __init__.py
src/agno_blog/infrastructure/: __init__.py
src/agno_blog/infrastructure/api/: main.py  models.py
src/agno_blog/infrastructure/llm_providers/: __init__.py  gemini.py  groq_provider.py  model_factory.py
src/agno_blog/infrastructure/observability/: __init__.py  comet_tracker.py  opik_tracer.py
tests/: __init__.py  conftest.py  test_blog_generator.py  test_groq_provider.py  test_model_factory.py
