[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agno-blog"
version = "1.0.0"
description = "AI-powered blog post generator with research and content extraction"
authors = [
    {name = "Cristiano Lacerda Nunes Pinto", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "agno>=2.1.0",
    "fastapi>=0.119.0",
    "uvicorn[standard]>=0.37.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.0",
    "streamlit>=1.28.0",
    "markdown>=3.5.0",
    "newspaper4k>=0.9.3",
    "googlesearch-python>=1.3.0",
    "sqlalchemy>=2.0.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.14.0",
    "lxml>=6.0.0",
    "comet-ml>=3.53.0",
    "opik>=1.8.0",
    "opentelemetry-sdk>=1.37.0",
    "opentelemetry-exporter-otlp>=1.37.0",
    "openinference-instrumentation-agno>=0.1.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.0",
    "mypy>=1.18.0",
    "black>=25.9.0",
    "ipykernel>=7.0.0",
    "ipython>=9.6.0",
    "jupyter>=1.0.0",
]

[project.scripts]
agno-cli = "agno_blog.cli:main"
agno-api = "agno_blog.infrastructure.api.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
